<resources>
    <string name="app_name">Amber</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title Product</string>
    <string name="_100_product">+100 Товаров</string>
    <string name="_1_600">$1,600</string>
    <string name="category">Категории</string>
    <string name="recomendary">Рекомендуется для вас</string>
    <string name="regist">Регистрация</string>
    <string name="email">Email</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="confident">Создавая аккаунт, вы соглашаетесь с нашими правилами</string>
    <string name="sign_up">зарегистрироваться</string>
    <string name="sign_in">Уже есть аккаунт? Войти</string>
    <string name="welcome">Добро пожаловать в Amber!</string>
    <string name="the_best_products">Самые лучшие ювелирные товары</string>
    <string name="convenient_management">Удобное управление</string>
    <string name="dev_management">Наша команда разработчиков разрабатывала для вас самое удобное управление</string>
    <string name="variety_of_goods">Многообразие товаров</string>
    <string name="buy_goods">В нашем приложении вы можете самые разнообразные товары по хорошим ценам!</string>

    <string name="basket">корзина</string>
    <string name="total">Общий:</string>
    <string name="basket_title">Solid Gold Petite Micropave</string>
    <string name="review">rating</string>
    <string name="sum">сумма</string>
    <string name="price">Цена</string>

    <string name="about_us_text">Здраствуйте наш посетитель! Мы команда Android-разработчиков, создали приложение специально для тех кто хотел бы заказать ювелирные украшения, сидя дома.
        \n\nМы старались создать для вас приятный и приятный интерфейс,здесь есть категории,корзина, и посик продуктов.
        \n\nПочему мы назвали приложение Amber? Наша команда долго думала насчет названия и мы пришли к выводу назвать приложение “Amber”.
        \n\nМы подуваем  добавлять и добавлять интересные вещи специально для вас. Приятного использования! </string>
    <string name="about_us">О нас</string>
    <string name="support_text">Если у вас возникли вопросы или проблемы насчет нашего приложения, то просим вас написать по вот этому номеру: +996 703 132 927</string>
    <string name="save_name">Введите имя</string>
    <string name="save_password">Введите пароль</string>
    <string name="save_email">Введите email</string>

    <string name="home">Главная</string>
    <string name="search">Искать</string>
    <string name="basket_">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="help">Помощь и поддержка</string>

    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="found_50_results">found_50_results</string>
    <string name="users_email">Users email</string>

    <string name="found_50_results">FOUND 50 RESULTS</string>
</resources>