<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.profile.AboutUsFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:backgroundTint="#FFDCBC"
        app:cardElevation="44dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/about_us"
            android:textAlignment="center"
            android:textColor="#0B1124"
            android:textSize="46sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_name_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="120dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#0B1124"
            android:textSize="18sp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_about_us"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="200dp"
        android:text="@string/about_us_text"
        android:textColor="#0B1124"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/card_view" />


</androidx.constraintlayout.widget.ConstraintLayout>